Update page titles, replace email

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4f1d8a">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
-    <title>Omnirubus</title>
+    <title>{{ page.title }}</title>
 </head>
 <body class="p-8 min-h-screen bg-gray-100">
     <a href="/"><img src="omnirubus.png" width="100" class="logo invert brightness-25 mb-8"></a>
