--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,9 +1,15 @@
 <a href="{{include.link}}">
-    <div class="p-6 bg-white shadow-lg rounded-2xl space-y-4 transition duration-300 transform hover:scale-105">
-        <img src="{{site.baseurl}}/assets/images/{{ include.image }}" class="bg-gray-100 w-full h-64 rounded-lg object-cover">
+    <div class="p-6 bg-white shadow-lg rounded-2xl space-y-2 transition duration-300 transform hover:scale-105 hover:shadow-2xl">
+        <img src="{{site.baseurl}}/assets/images/{{ include.image }}" class="bg-gray-100 w-full h-64 rounded-lg object-cover mb-4">
         <h1 class="font-medium text-2xl">
             {{ include.title }}
         </h1>
+        <div class="flex space-x-2">
+            {% assign tech = include.tech | split: ',' %}
+            {% for platform in tech %}
+                <span class="px-4 py-1 bg-purple-400 text-white rounded-full text-sm font-medium">{{ platform }}</span>
+            {% endfor %}
+        </div>
         <p>
             {{ include.content }}
         </p>
